# domain-redirector

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
ci/: Dockerfile
examples/: deployment.yaml  httproute_domain-redirector.yaml
src/: config.rs  main.rs  metrics.rs  ua.rs
