[package]
name = "domain-redirector"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
toml = "1"

anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

prometheus = "0.14"
lazy_static = "1.5"
